# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 67ef073322d4_create_users_table.py
tests/: conftest.py  test_app.py  test_database.py
