[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "tenchini",email = "tenchini.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"


[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
preview = true

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'

pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

lint = 'ruff check . ; ruff check . --diff'
pre_format = 'ruff check --fix'
format = 'ruff check . --fix ; ruff format .'
